kubernetes/main/apps/home/ntfy/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ntfy
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
        - matchLabels:
            io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: alertmanager
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # upstream-base-url push relay (ntfy.sh) for iOS notifications
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
